Ignora ed escludi i dataset .npy

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,9 @@ data/raw/X_train.npy
 data/processed/X_train_norm.npy
 data/raw/S_train.npy
 data/processed/S_train_norm.npy
+
+# Escludi dataset .npy
+data/raw/X_train.npy
+data/processed/X_train_norm.npy
+data/raw/S_train.npy
+data/processed/S_train_norm.npy
